# e2e_real_time_data_streaming

./: README.md  pyproject.toml  test.json
dags/: kafka_stream.py
